--- a/books/templates/books/book_details.html
+++ b/books/templates/books/book_details.html
@@ -1,4 +1,5 @@
 {% extends "website/base.html" %}
+{% load group_filters %}
 
 {% block content%}
   <div class="container">
@@ -22,7 +23,7 @@
                 {% if user == object.posted_by %}
                   <!-- https://docs.djangoproject.com/en/4.0/ref/templates/builtins/#date -->
                   <a href="{% url 'profile' pk=user.pk %}">me</a> on {{ object.date_posted|date:'d F, Y' }}
-                {% elif user.is_superuser %}
+                {% elif user.is_superuser or user|has_group:"full-CRUD" %}
                   <a href="{% url 'profile' pk=object.posted_by.id %}">{{ object.posted_by }}</a> on {{ object.date_posted|date:'d F, Y' }}
                 {% else %}
                   <a href="{% url 'profile_user' object.posted_by.id %}">{{ object.posted_by }}</a> on {{ object.date_posted|date:'d F, Y' }}
