--- a/books/templates/books/comments.html
+++ b/books/templates/books/comments.html
@@ -1,4 +1,5 @@
 {% load crispy_forms_tags %}
+{% load group_filters %}
 
 {% if user.is_authenticated %}
   <div class="row">
@@ -21,7 +22,7 @@
           </h4>
           <!-- https://docs.djangoproject.com/en/4.0/ref/templates/builtins/#date -->
           <span class="text-secondary">- {{ comment.date_posted|date:'d F, Y' }}</span>
-          {% if user == comment.posted_by or user.is_superuser %}
+          {% if user == comment.posted_by or user.is_superuser or user|has_group:"limited-CRUD, full-CRUD" %}
             <a class='btn-sm btn-danger float-end mt-2' href="{% url 'books_comment_delete' pk=object.id slug=object.slug id=comment.id %}">Delete</a>
             <a class='btn-sm btn-primary me-2 float-end mt-2' href="{% url 'books_comment_update' pk=object.id slug=object.slug id=comment.id %}">Update</a>
           {% endif %}
