--- a/website/templates/website/base.html
+++ b/website/templates/website/base.html
@@ -1,5 +1,6 @@
 {% load static %}
 {% load genres_tags %}
+{% load group_filters %}
 
 <!DOCTYPE html>
 <html lang="en">
@@ -64,7 +65,7 @@
             <li class="nav-item">
               <a href="{% url 'website_about' %}" class="nav-link">About</a>
             </li>
-            {% if user.is_superuser %}
+            {% if user.is_superuser or user|has_group:"full-CRUD" %}
             <li class="nav-item">
               <a href="{% url 'website_admin_part' %}" class="nav-link">Admin</a>
             </li>
