--- a/website/templates/website/admin_part.html
+++ b/website/templates/website/admin_part.html
@@ -1,7 +1,11 @@
-{% extends "website/base.html" %} {% block content %}
+{% extends "website/base.html" %} {% load group_filters %} {% block content %}
 <div class="container-fluid h-100 text-center mt-5 admin-books-users">
-  <div class="row h-100">
-    <div class="col-lg-6 pe-5 scroll">
+  {% if user|has_group:"limited-CRUD" %}
+    <div class="row justify-content-center h-100">
+  {% else %}
+    <div class="row h-100">
+  {% endif %}
+    <div class="col-lg-6 pe-5 scroll-admin-books">
       <h1 class="books-heading"> Books </h1>
       {% for book in books %}
       <div class="border-top border">
@@ -16,16 +20,18 @@
             <p class="me-2 border px-1 small">{{ book.author }}</p>
           </div>
           <div class="col">
-              <a
-                  href="{% url 'books_delete' pk=book.pk slug=book.slug %}"
-                  class="btn float-end btn-danger m-2 btn-sm"
-                  >Delete
-              </a>
-              <a
-                  href="{% url 'books_update' pk=book.pk slug=book.slug %}"
-                  class="btn float-end btn-warning m-2 btn-sm"
-                  >Update
-              </a>
+              {% if user.is_superuser or user|has_group:"full-CRUD" %}
+                <a
+                    href="{% url 'books_delete' pk=book.pk slug=book.slug %}"
+                    class="btn float-end btn-danger m-2 btn-sm"
+                    >Delete
+                </a>
+                <a
+                    href="{% url 'books_update' pk=book.pk slug=book.slug %}"
+                    class="btn float-end btn-warning m-2 btn-sm"
+                    >Update
+                </a>
+              {% endif %}
               <a
               href="{% url 'books_details' pk=book.pk slug=book.slug %}"
               class="btn float-end btn-primary m-2 btn-sm"
@@ -63,6 +69,7 @@
       </div>
       {% endfor %}
     </div>
+    {% if user.is_superuser or user|has_group:"full-CRUD" %}
     <div class="col-lg-6 pe-5 ">
       <h1> Users </h1>
         {% for user_profile in users %}
@@ -92,6 +99,7 @@
             </div>
         {% endfor %}
     </div>
+    {% endif %}
   </div>
 </div>
 {% endblock content %}
