--- a/static_files/main.css
+++ b/static_files/main.css
@@ -159,3 +159,8 @@ div.scroll {
   display: flex;
   justify-content: space-between;
 }
+
+.language-genre-div {
+  display: flex;
+  text-align: center;
+}
