--- a/books/templates/books/recommended_book_list.html
+++ b/books/templates/books/recommended_book_list.html
@@ -11,7 +11,7 @@
           <div class="book-div">
           <img src="{{ book.image.url }}" alt="no photo" class="rounded img-fluid" />
           <h4 class="mt-3">{{ book.title }}</h4>
-          <h5><a href="{% url 'author_books' book.author %}">{{ book.author }}</a></h5>
+          <h5><a href="{% url 'author_books' pk=book.author.id author=book.author %}">{{ book.author }}</a></h5>
           <a
             href="{% url 'books_details' pk=book.pk slug=book.slug %}"
             class="btn btn-primary mt-1 mb-2"
